--- a/css/nav_background_footer_body.css
+++ b/css/nav_background_footer_body.css
@@ -49,6 +49,19 @@ nav ul li:hover{
     font-size: 200%;
 }
 
+footer a{
+    background: linear-gradient(to top, rgb(22, 89, 101), rgba(0, 255, 89, 0.33));
+	color: black;
+	border: none;
+	border-radius: 3px;
+}
+
+footer a:hover{
+    background: linear-gradient(to top, rgb(126, 238, 184), rgb(135, 245, 175));
+	transition: all 1s;
+	cursor: pointer;
+}
+
 
 /* Responsive */
 @media only screen and (min-width: 320px){
