--- a/css/nav_background_footer_body.css
+++ b/css/nav_background_footer_body.css
@@ -5,33 +5,18 @@ body{
     background-repeat: repeat;
 }
 
-.nav-box{
-    margin: 0 auto;
-    display: flex;
+nav div{
     background-color: rgb(6, 124, 118);
-    border: outset 10px rgba(50, 101, 99, 0.8);
-    justify-content: space-between;
-    height: 100px;
-    width: 91%;
-    align-items: center;
-    text-align: center;
 }
 
-nav a{
-    height: 100px;
-}
 
 body a,b{
     color: black;
 }
 
 nav ul li{
-    display: inline;
     margin-right: 7px;
     background: linear-gradient(to top, rgb(22, 89, 101), rgba(0, 255, 89, 0.33));
-	color: black;
-	border: none;
-	border-radius: 3px;
 }
 
 nav ul li:hover{
